--- a/style.css
+++ b/style.css
@@ -5,11 +5,12 @@
   flex-direction: column;
 }
 #chart-container{
-  /* position: relative; 
-  height: 40vh; 
-  width: 80vw;
-  border: 1px solid blue; */
+  position: relative; 
+  height: 400px; 
+  width: 400px;
+  border: 1px solid blue;
 }
+
 button {
   padding: 0.5rem 1.2rem;
 border-radius: 20px;
@@ -26,6 +27,9 @@ button:hover{
   width: 50%;
  
 }
+/* .display-none{
+  visibility: hidden;
+} */
 
 .stat-and-continent-container{
   display: flex;
