--- a/style.css
+++ b/style.css
@@ -1,19 +1,27 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
 .container{
-  min-height: 100vh;
-  background-color: aqua;
+  height: 100vh;
+  /* background-color: aqua; */
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
-#chart-container{
-  position: relative; 
-  height: 400px; 
-  width: 400px;
-  border: 1px solid blue;
+
+.chart-container{
+ width: 1000px;
+ /* display: flex; */
+ /* justify-content: center; */
 }
 
 button {
-  padding: 0.5rem 1.2rem;
-border-radius: 20px;
+  padding: 0.5rem 1.9rem;
+  border-radius: 20px;
   background-color: #000;
   color: #fff;
   cursor: pointer;
@@ -23,25 +31,30 @@ button:hover{
   opacity: 0.7;
 }
 
-.countries-conrainer{
-  width: 50%;
- 
-}
-/* .display-none{
-  visibility: hidden;
-} */
-
 .stat-and-continent-container{
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
 }
 
 .continents-container{
   display: flex;
- width: 30%;
- border: 1px solid red;
- justify-content: space-around;
+  width: 30%;
+  /* border: 1px solid red; */
+  justify-content: space-around;
+}
+
+.countries-and-small-chart-container{
+  display: flex;
+  margin-top: 2rem;
+}
+
+.countries-container{
+  width: 40%;
+}
+
+.small-chart{
+  width: 600px;
 }
 
